scrittura newChat nel database